# c-learn

./: CMakeLists.txt
include/: calc.h  hdr.h
src/: hello.c  macro.c  pointer.c
src/calc/: getch.c  getop.c  main.c  stack.c
